# twitter-clone

./: Cargo.toml  Dockerfile  Rocket.toml  compose.yaml  init.sql  readme.md
.sqlx/: query-2d943e070fae774e82ff51066d2ed3afcbcda136f62211fad0010a1766507cfb.json  query-76755c14d7f841bc2cb433fcb7b4321b0f5e9895693b853029be1077f3ae6e8f.json  query-7a0cb3929d1eb91bd54f38f7c858cc3e6decffcb51568e5e1e79afa1f162c467.json  query-898d0643760d35313fb57cedaadc6609be3e1090182d2892a44e641f932a8e6b.json  query-a98dec6acc7133ed21f1d5d0af00c795d4ef963de72c9c837de0be70490ca351.json  query-ba43a878ff597fe69fc478b3f34af65433acba0a67808c7c2b237072b14ee7f1.json  query-d4de8f5f804f721ffee589ea2a4cfef8500426de1c04d2186382af93f3d002a3.json  query-de9bbc165fea46ff969d624aec13ea54b009727e2548e72d76a8ad906954db4a.json  query-e21f332e2b42bf0ccd672b9f442429e40cca8c49e3448b7015a61f4ed437bf20.json
.zed/: tasks.json
db-queries/: sessions.sql  temp.sql
src/: main.rs
src/database/: auth.rs  mod.rs  posts.rs
src/pages/: mod.rs
src/router/: account.rs  middleware.rs  mod.rs  posts.rs
templates/: admin-panel.html  base-logged.html  base.html  comment.html  comments.html  header.html  hello.html  home.html  login.html  my-posts.html  new-post.html  post.html  single-post.html
tls/: ca-cert.pem  ca-key.pem
